--- a/_sass/pages/_forum.scss
+++ b/_sass/pages/_forum.scss
@@ -2,6 +2,32 @@
 @import "mixins";
 @import "variables";
 
+// layout
+.content-wrapper {
+  .page-content {
+    padding: 20px;
+
+    @include breakpoint(medium, min) {
+      display: flex;
+    }
+  }
+}
+
+// page header?
+.page-header.has-secondary .page-header-main {
+  display: inline-block;
+}
+@include breakpoint(medium, min) {
+  .page-header.has-secondary .page-header-secondary {
+    float: right;
+    text-align: right;
+    display: flex;
+    vertical-align: text-bottom;
+  }
+}
+
+
+
 .gym-discussion-board-container {
   margin-top: 2rem;
 }
@@ -17,6 +43,30 @@
     margin-top: 2rem;
     margin-bottom: 0;
     border-bottom: none;
+  }
+
+  button {
+    border: 1px solid;
+    border: 1px solid #f8971d;
+    height: 34px;
+    background-color: $gym-orange;
+    color: white;
+    font-family: $gym-font-stack;
+    font-weight: bold;
+    font-size: 1.2em;
+    line-height: 1;
+    text-align: center;
+  
+    &:hover {
+      border: 1px solid $gym-button-background-hover;
+      background-color: $gym-button-background-hover;
+    }
+  
+    &:active,
+    &:focus {
+      border: 1px solid $gym-button-background-active;
+      background-color: $gym-button-background-active;
+    }
   }
 }
 
@@ -82,7 +132,7 @@
   box-shadow: none;
 }
 
-@media (min-width: 768px) {
+@include breakpoint(medium, min) {
   .discussion-body,
   .discussion-module {
     display: flex;
@@ -250,94 +300,94 @@
 Discussion Forum Related
 TODO: migrate discussion CSS out of theme
 --- */
-#discussion-container {
-  span.forum-nav-browse-menu,
-  .view-discussion-home .helpgrid-row th.row-title,
-  .view-discussion-home .helpgrid-row .row-item-full,
-  .view-discussion-home .helpgrid-row td.row-item,
-  span.label.label-settings,
-  ul.forum-nav-browse-menu li {
-    font-size: 14px;
-  }
+// #discussion-container {
 
-  .view-discussion-home h2.home-title {
-    font-size: 30px;
-  }
+// }
 
-  .forum-search .search-input {
-    width: 184px;
-  }
+span.forum-nav-browse-menu,
+.view-discussion-home .helpgrid-row th.row-title,
+.view-discussion-home .helpgrid-row .row-item-full,
+.view-discussion-home .helpgrid-row td.row-item,
+span.label.label-settings,
+ul.forum-nav-browse-menu li {
+  font-size: 14px;
+}
 
-  // Add post button wrapper
-  .forum-actions {
-    margin-left: 10px;
+.view-discussion-home h2.home-title {
+  font-size: 30px;
+}
 
-    // Add post button
-    button {
-      background-color: $gym-orange;
-      border: 1px solid $gym-orange;
 
-      &:active,
-      &:hover {
-        background-color: $gym-light-gray;
-        border: 1px solid $gym-light-gray;
-      }
-    }
-  }
 
-  .discussion-post .post-body,
-  .discussion-post .post-context,
-  .forum-nav-filter-main-control,
-  .forum-nav-sort,
-  .forum-nav-thread-title,
-  .forum-nav-thread-votes-count,
-  .forum-nav-thread-comments-count,
-  .reply-body textarea,
-  .response-body,
-  .wmd-preview-container .wmd-preview,
-  .wmd-preview-container .wmd-preview-label {
-    font-weight: normal;
-  }
+// Add post button wrapper
+.forum-actions {
+  margin-left: 10px;
 
-  a.username,
-  .actions-dropdown .action-list-item,
-  .forum-nav-filter-main-control,
-  .forum-nav-sort,
-  .posted-details {
-    font-size: 12px;
-  }
+  // // Add post button
+  // button {
+  //   background-color: $gym-orange;
+  //   border: 1px solid $gym-orange;
 
-  .actions-dropdown .action-list-item:hover {
-    border: none;
-    font-weight: bold;
-    color: $gym-orange;
-  }
-
-  // .btn-link.action-button.action-follow,
-  // .btn-link.action-button.action-follow icon,
-  // .discussion-post,
-  // .discussion-post .post-body,
-  // .discussion-post .post-context,
-  // .field-help,
-  // .field-label,
-  // .field-label-text,
-  // .field-input-label,
-  // .forum-nav-thread-title,
-  // .forum-nav-thread-votes-count,
-  // .forum-nav-thread-comments-count,
-  // .thread-preview-body,
-  // li.post-label,
-  // li.post-label icon,
-  // .icon,
-  // input,
-  // .response-count,
-  // .response-body,
-  // textarea,
-  // .wmd-preview-container,
-  // .wmd-preview-label {
-  //   font-size: 14px;
+  //   &:active,
+  //   &:hover {
+  //     background-color: $gym-light-gray;
+  //     border: 1px solid $gym-light-gray;
+  //   }
   // }
 }
+
+.discussion-post .post-body,
+.discussion-post .post-context,
+.forum-nav-filter-main-control,
+.forum-nav-sort,
+.forum-nav-thread-title,
+.forum-nav-thread-votes-count,
+.forum-nav-thread-comments-count,
+.reply-body textarea,
+.response-body,
+.wmd-preview-container .wmd-preview,
+.wmd-preview-container .wmd-preview-label {
+  font-weight: normal;
+}
+
+a.username,
+.actions-dropdown .action-list-item,
+.forum-nav-filter-main-control,
+.forum-nav-sort,
+.posted-details {
+  font-size: 12px;
+}
+
+.actions-dropdown .action-list-item:hover {
+  border: none;
+  font-weight: bold;
+  color: $gym-orange;
+}
+
+// .btn-link.action-button.action-follow,
+// .btn-link.action-button.action-follow icon,
+// .discussion-post,
+// .discussion-post .post-body,
+// .discussion-post .post-context,
+// .field-help,
+// .field-label,
+// .field-label-text,
+// .field-input-label,
+// .forum-nav-thread-title,
+// .forum-nav-thread-votes-count,
+// .forum-nav-thread-comments-count,
+// .thread-preview-body,
+// li.post-label,
+// li.post-label icon,
+// .icon,
+// input,
+// .response-count,
+// .response-body,
+// textarea,
+// .wmd-preview-container,
+// .wmd-preview-label {
+//   font-size: 14px;
+// }
 
 // Prevents jitter effect pre-hover
 .has-breadcrumbs .breadcrumbs .all-topics {
@@ -353,50 +403,6 @@ TODO: migrate discussion CSS out of theme
   }
 }
 
-.forum-search .search-button,
-.discussion-submit-post {
-  border: 1px solid;
-  border-left: none;
-  border: 1px solid $gym-orange;
-  background-color: $gym-orange;
-  color: white;
-  font-family: $gym-font-stack;
-  font-weight: bold;
-  font-size: 1.2em;
-  line-height: 1;
-  text-align: center;
-
-  &:hover {
-    border: 1px solid $gym-button-background-hover;
-    background-color: $gym-button-background-hover;
-  }
-
-  &:active,
-  &:focus {
-    border: 1px solid $gym-button-background-active;
-    background-color: $gym-button-background-active;
-  }
-}
-
-.content-wrapper .page-header.has-secondary .page-header-main {
-  display: inline-block;
-}
-@media (min-width: 768px) {
-  .content-wrapper .page-header.has-secondary .page-header-secondary {
-    float: right;
-    text-align: right;
-    display: flex;
-    vertical-align: text-bottom;
-  }
-}
-.content-wrapper .page-content {
-  padding: 20px;
-}
-@media (min-width: 768px) {
-  .content-wrapper .page-content {
-    display: flex;
-  }
-}
 .discussion .post-label {
   font-weight: 300;
 }
@@ -418,7 +424,7 @@ TODO: migrate discussion CSS out of theme
   content: "";
   display: table;
 }
-@media (min-width: 768px) {
+@include breakpoint(medium, min) {
   .discussion-body {
     display: flex;
     flex-direction: row-reverse;
@@ -435,7 +441,7 @@ section.discussion::after {
 .new-post-article .forum-new-post-form {
   padding: 20px;
 }
-@media (min-width: 768px) {
+@include breakpoint(medium, min) {
   .forum-nav {
     max-width: 300px;
     width: 25%;
@@ -445,7 +451,7 @@ section.discussion::after {
   flex-grow: 1;
   margin-bottom: 20px;
 }
-@media (min-width: 768px) {
+@include breakpoint(medium, min) {
   .discussion-column {
     margin-left: 20px;
     min-height: 500px;
@@ -1030,19 +1036,40 @@ section.discussion::after {
 .forum-search {
   display: flex;
   margin-top: 20px;
-}
-.forum-search .search-input {
-  width: 9.375rem;
-}
-.forum-search .search-button {
-  margin-left: 0;
-}
-@media (min-width: 576px) {
-  .forum-search {
+
+  @include breakpoint(medium, min) {
     margin-left: 20px;
     margin-top: 0;
   }
+
+  .search-button {
+    width: 9.375rem;
+    border-left: 0;
+  }
+
+  .search-input {
+    width: 184px;
+    border-right: 0;
+  }
 }
+
+.input-text[type=search]+button {
+  -webkit-border-top-left-radius: 0;
+  -moz-border-topleft-radius: 0;
+  border-top-left-radius: 0;
+  -webkit-border-bottom-left-radius: 0;
+  -moz-border-bottomleft-radius: 0;
+  border-bottom-left-radius: 0;
+  -webkit-border-top-right-radius: 3px;
+  -moz-border-topright-radius: 3px;
+  border-top-right-radius: 3px;
+  -webkit-border-bottom-right-radius: 3px;
+  -moz-border-bottomright-radius: 3px;
+  border-bottom-right-radius: 3px;
+  margin-left: -5px;
+  margin-right: 0;
+}
+
 .post-type-label {
   margin-right: 20px;
   display: inline-block;
@@ -1051,9 +1078,9 @@ section.discussion::after {
 .post-options .field-label {
   display: inline-block;
 }
-.field-label .field-input:checked + .field-input-label {
-  color: #0075b4;
-}
+// .field-label .field-input:checked + .field-input-label {
+//   color: #0075b4;
+// }
 .input-radio,
 .input-checkbox {
   margin-right: 10px;
