--- a/_sass/components/bootstrap/_tables.scss
+++ b/_sass/components/bootstrap/_tables.scss
@@ -1,15 +1,16 @@
 table {
   background-color: transparent;
+  width: 100%;
+  max-width: 100%;
+  margin-bottom: 20px;
+  border-spacing: 0;
+  border-collapse: collapse;
 }
 
 th {
   text-align: left;
 }
-.table {
-  width: 100%;
-  max-width: 100%;
-  margin-bottom: 20px;
-}
+
 .table > tbody > tr > td,
 .table > tbody > tr > th,
 .table > tfoot > tr > td,
