--- a/_sass/pages/_forum.scss
+++ b/_sass/pages/_forum.scss
@@ -103,14 +103,13 @@
     text-shadow: none;
     white-space: nowrap;
     text-decoration: none;
-    transition: color 0.125s ease-in-out 0s, border-color 0.125s ease-in-out 0s,
-      background 0.125s ease-in-out 0s, box-shadow 0.125s ease-in-out 0s;
+    transition: color 0.125s ease-in-out 0s, border-color 0.125s ease-in-out 0s, background-color 0.125s ease-in-out 0s;
     display: inline-block;
     padding: 1px;
     background: transparent;
     border-radius: 0;
     background-color: transparent;
-    box-shadow: none;
+    // box-shadow: none;
     color: inherit;
     font-size: 14px;
     font-family: "brandon-grotesque", "Helvetica Neue", Helvetica, Arial,
@@ -129,7 +128,7 @@
   width: 100%;
   border: none;
   background: transparent;
-  box-shadow: none;
+  // box-shadow: none;
 }
 
 @include breakpoint(medium, min) {
@@ -149,15 +148,20 @@
 
 .discussion-column {
   font-weight: 700;
-  flex-grow: 1;
-  margin-left: 20px;
-  min-height: 500px;
+  // margin-left: 20px;
+  
   margin-bottom: 0;
-  width: 75%;
+  width: 100%;
   background: white;
   border: 1px solid #ccc;
-  border-radius: 2px;
+  // border-radius: 2px;
   padding: 20px;
+
+  @include breakpoint(medium, min) {
+    flex-grow: 1;
+    width: 75%;
+    min-height: 500px;
+  }
 
   .response-count {
     margin-right: 10px;
@@ -176,11 +180,15 @@
 
 .forum-nav {
   display: block;
-  max-width: 300px;
-  width: 25%;
+  width: 100%;
   background: white;
   border: 1px solid #ccc;
   border-radius: 2px;
+
+  @include breakpoint(medium, min) {
+    max-width: 300px;
+    width: 25%;
+  }
 
   .search-alert {
     -webkit-transition: none;
@@ -241,7 +249,7 @@
       border-bottom: 1px solid #d9d9d9;
       padding: 10px;
       background: transparent;
-      box-shadow: none;
+      // box-shadow: none;
       background-image: none;
       cursor: pointer;
     }
@@ -267,7 +275,7 @@
   border-bottom: none;
   border-radius: 3px;
   border: 1px solid #d9d9d9;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
+  // box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
 }
 
 .view-discussion-home .helpgrid-row {
@@ -408,8 +416,6 @@ a.username,
 }
 .view-discussion-home .label {
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
-.view-discussion-home .label {
   line-height: 17.76px;
   font-size: 0.75rem;
 }
@@ -417,7 +423,7 @@ a.username,
   width: 100%;
   border: none;
   background: transparent;
-  box-shadow: none;
+  // box-shadow: none;
 }
 .discussion-body::after {
   clear: both;
@@ -448,11 +454,12 @@ section.discussion::after {
   }
 }
 .discussion-column {
-  flex-grow: 1;
+  width: 100%;
   margin-bottom: 20px;
 }
 @include breakpoint(medium, min) {
   .discussion-column {
+    flex-grow: 1;
     margin-left: 20px;
     min-height: 500px;
     margin-bottom: 0;
@@ -536,7 +543,7 @@ section.discussion::after {
 }
 .wmd-button:hover {
   background: none;
-  box-shadow: none;
+  // box-shadow: none;
 }
 .wmd-button > span {
   display: inline-block;
@@ -644,14 +651,14 @@ section.discussion::after {
   border-bottom: 1px solid #d9d9d9;
   padding: 10px;
   background: transparent;
-  box-shadow: none;
+  // box-shadow: none;
   background-image: none;
   cursor: pointer;
 }
 .forum-nav-browse-title:hover,
 .forum-nav-browse-title:focus {
   background-image: none !important;
-  box-shadow: none !important;
+  // box-shadow: none !important;
   background: #fff !important;
 }
 .forum-nav-browse-menu {
@@ -663,19 +670,19 @@ section.discussion::after {
   max-height: 600px;
 }
 .forum-nav-refine-bar {
-  -webkit-border-top-left-radius: 3px;
-  -moz-border-topleft-radius: 3px;
-  border-top-left-radius: 3px;
-  -webkit-border-top-right-radius: 3px;
-  -moz-border-topright-radius: 3px;
-  border-top-right-radius: 3px;
-  -webkit-border-bottom-right-radius: 0;
-  -moz-border-bottomright-radius: 0;
-  border-bottom-right-radius: 0;
-  -webkit-border-bottom-left-radius: 0;
-  -moz-border-bottomleft-radius: 0;
-  border-bottom-left-radius: 0;
-  font-size: 0.75rem;
+  // -webkit-border-top-left-radius: 3px;
+  // -moz-border-topleft-radius: 3px;
+  // border-top-left-radius: 3px;
+  // -webkit-border-top-right-radius: 3px;
+  // -moz-border-topright-radius: 3px;
+  // border-top-right-radius: 3px;
+  // -webkit-border-bottom-right-radius: 0;
+  // -moz-border-bottomright-radius: 0;
+  // border-bottom-right-radius: 0;
+  // -webkit-border-bottom-left-radius: 0;
+  // -moz-border-bottomleft-radius: 0;
+  // border-bottom-left-radius: 0;
+  // font-size: 0.75rem;
   border-bottom: 1px solid #d9d9d9;
   background-color: #e7e7e7;
   padding: 5px 10px;
@@ -704,7 +711,6 @@ section.discussion::after {
   background-color: transparent;
 }
 .forum-nav-thread-list {
-  padding-left: 0 !important;
   min-height: 60px;
   max-height: 800px;
   border-bottom: 1px solid #e7e7e7;
@@ -712,19 +718,21 @@ section.discussion::after {
   overflow-y: auto;
   list-style: none;
   border-radius: 0 0 3px 3px;
+
+  .forum-nav-thread-labels {
+    margin: 5px 0 0;
+    padding-left: 0 !important;
+  }
+  .thread-preview-body {
+    margin-top: 5px;
+    color: #414141;
+    // font-size: 0.75rem;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
 }
-.forum-nav-thread-list .forum-nav-thread-labels {
-  margin: 5px 0 0;
-  padding-left: 0 !important;
-}
-.forum-nav-thread-list .thread-preview-body {
-  margin-top: 5px;
-  color: #414141;
-  font-size: 0.75rem;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-}
+
 .forum-nav-thread {
   border-bottom: 1px solid #d9d9d9;
   background-color: #fff;
@@ -762,7 +770,7 @@ section.discussion::after {
   align-self: flex-start;
 }
 .forum-nav-thread-wrapper-0 .icon {
-  font-size: 0.875rem;
+  // font-size: 0.875rem;
   width: 18px;
   text-align: center;
 }
@@ -778,13 +786,13 @@ section.discussion::after {
 }
 .forum-nav-thread-title {
   margin-left: 0;
-  font-size: 0.875rem;
+  // font-size: 0.875rem;
   display: block;
 }
 .forum-nav-thread-votes-count,
 .forum-nav-thread-comments-count {
   margin-right: 5px;
-  font-size: 0.75rem;
+  // font-size: 0.75rem;
   display: inline-block;
   text-align: center;
   color: #161616;
@@ -832,10 +840,10 @@ section.discussion::after {
   background-color: #0075b4 !important;
 }
 .view-discussion-home {
-  padding-left: 20px;
+  // padding-left: 20px;
   display: none;
 }
-@media (min-width: 992px) {
+@include breakpoint(medium, min) {
   .view-discussion-home {
     display: block;
   }
@@ -862,7 +870,7 @@ section.discussion::after {
   border-bottom: none;
   border-radius: 3px;
   border: 1px solid #d9d9d9;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
+  // box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
 }
 .view-discussion-home .helpgrid-row {
   border-bottom: 1px solid #d9d9d9;
@@ -1101,9 +1109,9 @@ section.discussion::after {
 .forum-nav-browse-filter-input {
   padding-left: 5px;
   padding-right: 22px;
-  box-shadow: none;
+  // box-shadow: none;
   height: 10px;
-  font-size: 1.4rem !important;
+  font-size: 1.6rem;
   border: 1px solid #ccc;
 }
 .forum-nav-filter-main,
@@ -1116,19 +1124,21 @@ section.discussion::after {
 .forum-nav-sort-control {
   font: inherit;
 }
-#content .forum-nav,
-#content .discussion-column {
+
+
+.forum-nav,
+.discussion-column {
   background: white;
   border: 1px solid #ccc;
-  border-radius: 2px;
+  // border-radius: 2px;
 }
-#content .discussion-column {
+.discussion-column {
   padding: 20px;
 }
-#content .discussion-column span.label {
+.discussion-column span.label {
   color: #222;
 }
-#content .discussion-column .home-header span.label {
+.discussion-column .home-header span.label {
   display: none;
 }
 
@@ -1202,9 +1212,7 @@ section.discussion::after {
   color: #414141;
   text-align: center;
 }
-.discussion-body .discussion-article {
-  position: relative;
-}
+
 .discussion-body .discussion-article a,
 .discussion-body .discussion-article p {
   word-wrap: break-word;
@@ -1254,7 +1262,7 @@ section.discussion::after {
 }
 .discussion .actions-dropdown .actions-dropdown-list {
   box-sizing: border-box;
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+  // box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
   position: relative;
   width: 100%;
   border-radius: 3px;
@@ -1516,7 +1524,7 @@ section.discussion::after {
 }
 .wmd-button:hover {
   background: none;
-  box-shadow: none;
+  // box-shadow: none;
 }
 .wmd-button > span {
   display: inline-block;
@@ -1683,7 +1691,7 @@ section.discussion::after {
   margin: 20px 0;
   border: 1px solid #d9d9d9;
   border-radius: 3px;
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0.25);
+  // box-shadow: 0 0 1px rgba(0, 0, 0, 0.25);
 }
 .discussion .responses .discussion-response {
   box-sizing: border-box;
@@ -1720,7 +1728,7 @@ section.discussion::after {
   padding: 10px 20px;
   width: 100%;
   background: #f5f5f5;
-  box-shadow: 0 1px 3px -1px rgba(0, 0, 0, 0.25) inset;
+  // box-shadow: 0 1px 3px -1px rgba(0, 0, 0, 0.25) inset;
 }
 .discussion .comments {
   -webkit-border-top-left-radius: 0;
@@ -1736,7 +1744,7 @@ section.discussion::after {
   -moz-border-bottomleft-radius: 3px;
   border-bottom-left-radius: 3px;
   background: #f5f5f5;
-  box-shadow: 0 1px 3px -1px rgba(0, 0, 0, 0.25) inset;
+  // box-shadow: 0 1px 3px -1px rgba(0, 0, 0, 0.25) inset;
 }
 .discussion .comments > li {
   border-top: 1px solid #d9d9d9;
@@ -1793,7 +1801,7 @@ section.discussion::after {
   margin-bottom: 0 !important;
   padding-bottom: 0 !important;
 }
-#content .discussion-column div.response-count {
+.discussion-column div.response-count {
   margin-right: 10px;
 }
 
@@ -1828,7 +1836,7 @@ section.discussion::after {
     color: #31708f;
     background-color: #d9edf7;
     border-color: #bcdff1;
-    box-shadow: none;
+    // box-shadow: none;
     line-height: initial;
   }
   .alert.alert-info a,
@@ -1842,18 +1850,18 @@ section.discussion::after {
     color: #000;
     background-color: #dff0d8;
     border-color: #d0e9c6;
-    box-shadow: none;
+    // box-shadow: none;
   }
   .alert.alert-warning {
     color: #000;
     background-color: #fcf8e3;
     border-color: #faf2cc;
-    box-shadow: none;
+    // box-shadow: none;
   }
   .alert.alert-danger {
     color: #000;
     background-color: #f2dede;
     border-color: #ebcccc;
-    box-shadow: none;
+    // box-shadow: none;
   }
 }
