--- a/_sass/pages/_forum.scss
+++ b/_sass/pages/_forum.scss
@@ -660,8 +660,9 @@ section.discussion::after {
   // font-size: 0.75rem;
   border-bottom: 1px solid #d9d9d9;
   background-color: #e7e7e7;
-  padding: 5px 10px;
+  padding: 5px;
   color: #161616;
+  font-size: 1.1rem;
 }
 .forum-nav-refine-bar::after {
   clear: both;
@@ -671,12 +672,10 @@ section.discussion::after {
 .forum-nav-filter-main {
   text-align: left;
   float: left;
-  box-sizing: border-box;
   width: 50%;
 }
 .forum-nav-sort {
   text-align: right;
-  box-sizing: border-box;
   float: right;
 }
 .forum-nav-filter-main-control,
@@ -684,7 +683,11 @@ section.discussion::after {
   border: none;
   max-width: 100%;
   background-color: transparent;
+  padding: 0;
+  margin: 0;
+  font: inherit;
 }
+
 .forum-nav-thread-list {
   min-height: 60px;
   max-height: 800px;
@@ -1117,10 +1120,7 @@ section.discussion::after {
   line-height: 1em;
   margin-bottom: 0;
 }
-.forum-nav-filter-main-control,
-.forum-nav-sort-control {
-  font: inherit;
-}
+
 
 
 .forum-nav,
