--- a/_sass/_migrated-vendor.scss
+++ b/_sass/_migrated-vendor.scss
@@ -176,24 +176,18 @@
 // .fa-music:before {
 //   content: "\f001";
 // }
-.fa-search:before {
-  content: "\f002";
-}
+
 // .fa-envelope-o:before {
 //   content: "\f003";
 // }
 // .fa-heart:before {
 //   content: "\f004";
 // }
-.fa-star:before {
-  content: "\f005";
-}
+
 // .fa-star-o:before {
 //   content: "\f006";
 // }
-// .fa-user:before {
-//   content: "\f007";
-// }
+
 // .fa-film:before {
 //   content: "\f008";
 // }
@@ -206,14 +200,7 @@
 // .fa-th-list:before {
 //   content: "\f00b";
 // }
-.fa-check:before {
-  content: "\f00c";
-}
-.fa-remove:before,
-.fa-close:before,
-.fa-times:before {
-  content: "\f00d";
-}
+
 // .fa-search-plus:before {
 //   content: "\f00e";
 // }
@@ -270,12 +257,7 @@
 // .fa-list-alt:before {
 //   content: "\f022";
 // }
-.fa-lock:before {
-  content: "\f023";
-}
-.fa-flag:before {
-  content: "\f024";
-}
+
 // .fa-headphones:before {
 //   content: "\f025";
 // }
@@ -470,9 +452,7 @@
 // .fa-compress:before {
 //   content: "\f066";
 // }
-.fa-plus:before {
-  content: "\f067";
-}
+
 // .fa-minus:before {
 //   content: "\f068";
 // }
@@ -560,9 +540,7 @@
 // .fa-cogs:before {
 //   content: "\f085";
 // }
-// .fa-comments:before {
-//   content: "\f086";
-// }
+
 // .fa-thumbs-o-up:before {
 //   content: "\f087";
 // }
@@ -581,9 +559,7 @@
 // .fa-linkedin-square:before {
 //   content: "\f08c";
 // }
-.fa-thumb-tack:before {
-  content: "\f08d";
-}
+
 // .fa-external-link:before {
 //   content: "\f08e";
 // }
@@ -722,9 +698,7 @@
 // }
 // .fa-navicon:before,
 // .fa-reorder:before,
-.fa-bars:before {
-  content: "\f0c9";
-}
+
 // .fa-list-ul:before {
 //   content: "\f0ca";
 // }
@@ -764,12 +738,12 @@
 .fa-caret-down:before {
   content: "\f0d7";
 }
-// .fa-caret-up:before {
-//   content: "\f0d8";
-// }
-// .fa-caret-left:before {
-//   content: "\f0d9";
-// }
+.fa-caret-up:before {
+  content: "\f0d8";
+}
+.fa-caret-left:before {
+  content: "\f0d9";
+}
 .fa-caret-right:before {
   content: "\f0da";
 }
@@ -777,20 +751,7 @@
 //   content: "\f0db";
 // }
 // .fa-unsorted:before,
-.fa-sort:before {
-  content: "\f0dc";
-}
-.fa-sort-down:before,
-.fa-sort-desc:before {
-  content: "\f0dd";
-}
-.fa-sort-up:before,
-.fa-sort-asc:before {
-  content: "\f0de";
-}
-.fa-envelope:before {
-  content: "\f0e0";
-}
+
 // .fa-linkedin:before {
 //   content: "\f0e1";
 // }
@@ -898,9 +859,7 @@
 // .fa-angle-left:before {
 //   content: "\f104";
 // }
-.fa-angle-right:before {
-  content: "\f105";
-}
+
 // .fa-angle-up:before {
 //   content: "\f106";
 // }
