--- a/css/main.scss
+++ b/css/main.scss
@@ -21,6 +21,8 @@
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 :after,
 :before {
