--- a/_sass/pages/_courseware.scss
+++ b/_sass/pages/_courseware.scss
@@ -204,7 +204,7 @@
       background: none;
       box-shadow: none;
       text-shadow: none;
-      border: none;
+      border-color: transparent;
       margin-bottom: 0.3em;
 
       p {
