--- a/css/featured-courses.scss
+++ b/css/featured-courses.scss
@@ -79,6 +79,7 @@
 .featured-course header h2 a:active {
   font: inherit;
   text-decoration: none;
+  border: transparent;
 }
 
 .featured-course header p {
