--- a/_sass/pages/_forum.scss
+++ b/_sass/pages/_forum.scss
@@ -1659,7 +1659,7 @@ section.discussion::after {
 .discussion-response .response-body {
   padding: 10px 30px 0 0;
   margin-bottom: 0.2em;
-  font-size: 0.875rem;
+  // font-size: 0.875rem;
 }
 .discussion-post::after {
   clear: both;
@@ -1711,9 +1711,9 @@ section.discussion::after {
   padding: 20px;
   background-color: #fff;
 }
-.discussion-response .response-header-content .username {
-  font-size: 0.875rem;
-}
+// .discussion-response .response-header-content .username {
+//   font-size: 0.875rem;
+// }
 .discussion-response .response-body ol {
   padding-left: 40px;
   padding-right: 0;
@@ -1777,7 +1777,7 @@ section.discussion::after {
   float: right;
   margin-right: 10px;
   color: #414141;
-  font-size: 0.875rem;
+  // font-size: 0.875rem;
 }
 .response-pagination {
   visibility: visible;
@@ -1790,7 +1790,7 @@ section.discussion::after {
   display: block;
   padding: 10px 0;
   color: #414141;
-  font-size: 0.875rem;
+  // font-size: 0.875rem;
 }
 .discussion .action-label span,
 .discussion .action-icon span {
