--- a/_sass/pages/_forum.scss
+++ b/_sass/pages/_forum.scss
@@ -209,7 +209,7 @@
     vertical-align: middle;
 
     .message {
-      font-size: 0.75rem;
+      // font-size: 0.75rem;
       color: #fff;
     }
   }
@@ -291,12 +291,12 @@
 .view-discussion-home .helpgrid-row .row-title {
   padding: 30px 20px;
   background-color: #dedede;
-  font-size: 0.75rem;
+  // font-size: 0.75rem;
 }
 
 .view-discussion-home .helpgrid-row .row-item-full,
 .view-discussion-home .helpgrid-row .row-item {
-  font-size: 0.75rem;
+  // font-size: 0.75rem;
   padding: 0 10px;
   width: 26%;
   vertical-align: middle;
@@ -408,7 +408,7 @@ a.username,
 .view-discussion-home .label {
   font-family: $gym-text-font-stack;
   line-height: 17.76px;
-  font-size: 0.75rem;
+  // font-size: 0.75rem;
 }
 .discussion-body {
   width: 100%;
@@ -456,7 +456,7 @@ section.discussion::after {
 
 .discussion .post-label {
   margin: 5px 10px 0 0;
-  font-size: 0.75rem;
+  // font-size: 0.75rem;
   display: inline;
   white-space: nowrap;
 }
@@ -485,7 +485,7 @@ section.discussion::after {
 }
 .forum-nav-browse-filter .icon {
   right: 11px;
-  font-size: 0.75rem;
+  // font-size: 0.75rem;
   position: absolute;
   margin-top: -6px;
   top: 50%;
@@ -742,11 +742,11 @@ section.discussion::after {
 .view-discussion-home .helpgrid-row .row-title {
   padding: 30px 20px;
   background-color: #dedede;
-  font-size: 0.75rem;
+  // font-size: 0.75rem;
 }
 .view-discussion-home .helpgrid-row .row-item-full,
 .view-discussion-home .helpgrid-row .row-item {
-  font-size: 0.75rem;
+  // font-size: 0.75rem;
   padding: 0 10px;
   width: 26%;
   vertical-align: middle;
@@ -865,7 +865,7 @@ section.discussion::after {
 }
 .forum-new-post-form .post-field .field-help {
   margin: 5px 0 5px 0;
-  font-size: 0.75rem;
+  // font-size: 0.75rem;
   line-height: 1.5;
 }
 .forum-new-post-form .post-field .field-help#field_help_post_type {
@@ -1195,7 +1195,7 @@ section.discussion::after {
 }
 .discussion .action-button .action-icon {
   display: inline-block;
-  font-size: 0.75rem;
+  // font-size: 0.75rem;
   height: 20px;
   width: 20px;
   border: 1px solid #d9d9d9;
@@ -1341,7 +1341,7 @@ section.discussion::after {
 
 .discussion .post-label {
   margin: 5px 10px 0 0;
-  font-size: 0.75rem;
+  // font-size: 0.75rem;
   display: inline;
   white-space: nowrap;
 }
@@ -1362,7 +1362,7 @@ section.discussion::after {
 }
 .discussion .user-label-staff {
   color: #414141;
-  font-size: 0.75rem;
+  // font-size: 0.75rem;
   white-space: nowrap;
 }
 .discussion-post {
@@ -1434,7 +1434,7 @@ section.discussion::after {
   max-width: calc(100% - 100px);
 }
 .discussion-post .post-header-content .post-title {
-  font-size: 1.3125rem;
+  font-size: 1.5rem;
   margin-bottom: 5px;
 }
 .discussion-post .post-body {
@@ -1788,9 +1788,7 @@ section.discussion::after {
   width: auto;
   background-color: #f5f5f5;
 }
-.wmd-button {
-  background: none;
-}
+
 .wmd-button-row {
   -webkit-transition: all 0.2s ease-out 0s;
   -moz-transition: all 0.2s ease-out 0s;
@@ -1810,21 +1808,29 @@ section.discussion::after {
   background-color: Silver;
   list-style: none;
 }
-.wmd-button {
-  position: absolute;
-  display: inline-block;
-  width: 20px;
-  height: 20px;
-  border: none;
-  background: none;
-  list-style: none;
-  cursor: pointer;
-  padding: 0;
+
+// increase specificity for these buttons
+.wmd-panel {
+
+  .wmd-button {
+    position: absolute;
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    border: none;
+    background: none;
+    list-style: none;
+    cursor: pointer;
+    padding: 0;
+  
+    &:hover {
+      background: none;
+      // box-shadow: none;
+    }
+  }
 }
-.wmd-button:hover {
-  background: none;
-  // box-shadow: none;
-}
+
+
 .wmd-button > span {
   display: inline-block;
   width: 20px;
