--- a/_sass/pages/_forum.scss
+++ b/_sass/pages/_forum.scss
@@ -1485,7 +1485,7 @@ section.discussion::after {
 }
 .discussion .add-response {
   display: inline;
-  padding: 10px;
+  // padding: 10px;
 }
 .forum-response .action-show-comments {
   font-size: 0.875rem;
